// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HeadWithMeta when route has inline CSS 1`] = `
<head
  className="body"
>
  <meta
    content="React Static"
    name="generator"
  />
  <title>
    Helmet Title
  </title>
  <meta
    content="Helmet application"
    name="description"
  />
  <link
    as="script"
    href="/assets/path/main.js"
    rel="preload"
  />
  <link
    as="script"
    href="/assets/path/bootstrap.js"
    rel="preload"
  />
  <style
    dangerouslySetInnerHTML={
      {
        "__html": "[object Object]",
      }
    }
    type="text/css"
  />
</head>
`;

exports[`HeadWithMeta when route has no helmet title 1`] = `
<head
  className="body"
>
  <meta
    content="React Static"
    name="generator"
  />
  <meta
    content="Helmet application"
    name="description"
  />
  <link
    as="script"
    href="/assets/path/main.js"
    rel="preload"
  />
  <link
    as="script"
    href="/assets/path/bootstrap.js"
    rel="preload"
  />
  <link
    as="style"
    href="/assets/path/main.css"
    rel="preload"
  />
  <link
    href="/assets/path/main.css"
    rel="stylesheet"
  />
  <link
    as="style"
    href="/assets/path/bootstrap.css"
    rel="preload"
  />
  <link
    href="/assets/path/bootstrap.css"
    rel="stylesheet"
  />
  <title>
    Document Title
  </title>
</head>
`;

exports[`HeadWithMeta when route has title as child 1`] = `
<head
  className="body"
>
  <meta
    content="React Static"
    name="generator"
  />
  <title>
    Helmet Title
  </title>
  <meta
    content="Helmet application"
    name="description"
  />
  <link
    as="script"
    href="/assets/path/main.js"
    rel="preload"
  />
  <link
    as="script"
    href="/assets/path/bootstrap.js"
    rel="preload"
  />
  <link
    as="style"
    href="/assets/path/main.css"
    rel="preload"
  />
  <link
    href="/assets/path/main.css"
    rel="stylesheet"
  />
  <link
    as="style"
    href="/assets/path/bootstrap.css"
    rel="preload"
  />
  <link
    href="/assets/path/bootstrap.css"
    rel="stylesheet"
  />
</head>
`;

exports[`HeadWithMeta when route is a redirect route 1`] = `
<head
  className="body"
>
  <meta
    content="React Static"
    name="generator"
  />
  <title>
    Helmet Title
  </title>
  <meta
    content="Helmet application"
    name="description"
  />
</head>
`;

exports[`HeadWithMeta when route is a static route 1`] = `
<head
  className="body"
>
  <meta
    content="React Static"
    name="generator"
  />
  <title>
    Helmet Title
  </title>
  <meta
    content="Helmet application"
    name="description"
  />
  <link
    as="script"
    href="/assets/path/main.js"
    rel="preload"
  />
  <link
    as="script"
    href="/assets/path/bootstrap.js"
    rel="preload"
  />
  <link
    as="style"
    href="/assets/path/main.css"
    rel="preload"
  />
  <link
    href="/assets/path/main.css"
    rel="stylesheet"
  />
  <link
    as="style"
    href="/assets/path/bootstrap.css"
    rel="preload"
  />
  <link
    href="/assets/path/bootstrap.css"
    rel="stylesheet"
  />
</head>
`;
